# RequestBin-Capstone

./: .env.example  .gitignore  README.md
client/: README.md  eslint.config.js  package.json
client/src/: App.css  App.tsx  main.tsx
client/src/components/: Bin.tsx  Home.tsx  Options.tsx  Request.tsx
client/src/services/: requestbin_service.ts
server/: .gitignore  README.md  app.py  dummy_data.sql  pyproject.toml  request_bin.sql
server/services/: database_service.py  mongo_service.py  psql_service.py
server/src/: api_router.py  app.py  schema.sql
server/src/services/: database_service.py  parse_service.py  parser_services.py  psql_service.py
server/src/utilities/: url_generator.py
server/tests/: api_test_data.py  reset_sql_db.sql
server/tests/requests/: burn_bin.rest  create_new_bin.rest  delete_bin.rest  get_bins.rest
